# msp430_rust

./: .vimspector.json  Cargo.toml  binary_formats.txt  shared_memory_protocol.txt  test_all.sh
.github/workflows/: deploy_rust.yml
src/: main.rs  utils.rs
src/tests/: mod.rs
tools/: assembler
