[package]
name = "msp430_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
duplicate = "1.0.0"
shared_memory = "0.12.4"
base64 = "0.21.4"
libc = "0.2.0"
num_enum = "0.7.0"

[profile.test] # fixed
opt-level = 2
