[package]
name = "msp430_rust"
version = "0.2.3"
edition = "2021"
description = "An emulator for the MSP430-2xx series computer chip"
authors = ["Sam Wagenaar"]
license = "GPL v3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
duplicate = "1.0.0"
shared_memory = "0.12.4"
base64 = "0.21.4"
libc = "0.2.0"
num_enum = "0.7.0"
clap = { version = "4.4.5", features = ["derive"] }
ctrlc = "3.4.1"
fork = "0.1.22"
sysinfo = "0.29.10"

[profile.dev]
opt-level = 2

[profile.test] # fixed
opt-level = 2
